<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/maypaybuttonBoxLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp"
        android:elevation="10dp"
        android:background="@drawable/box"
        >

        <TextView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Totale: - €"
            android:fontFamily="@font/maven_medium"
            android:textColor="#000000"
            android:gravity="center_vertical|center_horizontal" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_ic"
            android:gravity="center_vertical|center_horizontal"
            android:padding="8dp"
            android:contentDescription="@string/maypay_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstPhrase"
            android:paddingTop="8dp"
            android:fontFamily="@font/maven"
            android:textColor="#606060"
            android:lineHeight="14dp"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondPhrase"
            android:fontFamily="@font/maven"
            android:textColor="#606060"
            android:lineHeight="14dp"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:id="@+id/message3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thirdPhrase"
            android:paddingBottom="16dp"
            android:fontFamily="@font/maven"
            android:textColor="#606060"
            android:lineHeight="14dp"
            android:gravity="center_vertical|center_horizontal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:drawableLeft="@drawable/logo_ic_single_white"
            android:fontFamily="@font/giorgio"
            android:gravity="center_vertical|center_horizontal"
            android:includeFontPadding="false"
            android:letterSpacing="0.07"
            android:paddingHorizontal="16dp"
            android:paddingVertical="7dp"
            android:shadowColor="#00000029"
            android:shadowDx="15"
            android:shadowDy="0"
            android:shadowRadius="40"
            android:text="@string/payWithMaypayButtonText"
            android:textAlignment="textEnd"
            android:textAppearance="?android:textAppearance"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>